# mono-backend

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  config.py  pyproject.toml  requirements.txt  run.py
alembic/versions/: 35ae23feec09_classes_table.py  4fda0239475a_init.py  57ac57a261a9_users_table.py  7982287b85e8_attendances_table.py  92c012d55e0e_subjects_table.py  9cee7aa27382_subscriptions_table.py  ccfa4ec88065_topics_table.py  d6e351d1dc58_registries_table.py
src/: config.py  run.py
src/controllers/: attendances_controller.py  auth_controller.py  classes_controller.py  courses_controller.py  health_controller.py  subjects_controller.py  subscriptions_controller.py  topics_controller.py  users_controller.py
src/database/: base_class.py  conn.py  session.py
src/helpers/: attendances.py  auth.py  classes.py  courses.py  email.py  subjects.py  subscriptions.py  topics.py  user.py  users.py  uuid.py
src/models/: attendances_model.py  classes_model.py  course_model.py  courses_model.py  subjects_model.py  subscriptions_model.py  topics_model.py  user_model.py  users_model.py
src/repositories/: attendances_repository.py  base_repository.py  classes_repository.py  courses_repository.py  subjects_repository.py  subscriptions_repository.py  topics_repository.py  user_repository.py  users_repository.py
src/routes/: routes.py
src/schemas/: attendances_schemas.py  auth_schemas.py  class_schemas.py  classes_schemas.py  courses_schema.py  courses_schemas.py  list_schema.py  status_schema.py  subjects_schemas.py  subscriptions_schemas.py  topics_schemas.py  (+1 more)
(+10 files in other folders)
