[tool.poetry]
name = "python-api"
version = "0.1.0"
description = "Api para controle de instituicao de ensino"
authors = ["Diogo Alexandria"]

packages = [
    { include="src", from="." },
]

[tool.poetry.scripts]
app = "src.run:app"

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.15"
psycopg2-binary = "^2.8.6"
PyJWT = "^2.1.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
async-exit-stack = "^1.0.1"
async_generator = "^1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
